2004-02-19  Derek Price  <derek@ximbiot.com>

	* sanity.sh: No longer allow user override of $tmp.  Set $TMPDIR to a
	directory under $TESTDIR, as for $HOME, but still allowing for user
	override.  Check for cvs-serv* directories under $TMPDIR rather than
	$tmp at the end of the script.

2004-02-19  Derek Price <derek@ximbiot.com>

	* run.c (cmdline_quote): Plug memory leak.
	(format_cmdline): Don't bother with freeing memory before a call to
	error() which will exit.  Plug memory leak.
	(Report from Mark D. Baushke <mdb@cvshome.org>.)

2004-02-18  Derek Price <derek@ximbiot.com>

	* run.c (format_cmdline): Move variable declaration to a position more
	acceptable to the ANSI C standards.

2004-02-17  Derek Price <derek@ximbiot.com>

	* commit.c (precommit_proc): Installed new format_cmdline() instead
	of the old, nonuniform info file interpreter.  Support for new user
	data field in Parse_Info() callbacks.  Use cmdlinequote() instead of c.
	10 lines of quote processing.
	* cvs.h (expand_path):  Update proto.
	(UseNewInfoFmtStrings): New global variable to keep track of the config
	option of the same name.
	(format_cmdline): Added function prototypes and type definitions to
	support this new function.
	* edit.c (notify_proc):  Added the formatsafe flag to an
	expand_path() call.  Installed new format_cmdline() instead of the old,
	nonuniform info file interpreter.  Support for new user data field in
	Parse_Info() callbacks.
	* expand_path.c (expand_path):  Added the formatsafe flag to and some
	code to double up '%'s in variable subs if formatsafe is set on the
	presumption that the variables that expand_path() subs into the string
	are already working paths to files or whatever.  It should be quoting
	too but I haven't done that yet.
	* logmsg.c (title_proc, logmsg_list_to_args_proc, update_logfile_proc,
	rcsinfo_proc, editinfo_proc, verifymsg_proc, logfile_write): Installed
	new format_cmdline() instead of the old, nonuniform info file